--- a/public/stylesheets/dogs/show.css
+++ b/public/stylesheets/dogs/show.css
@@ -1,80 +1,35 @@
-/* ul {
-    margin: 0 0 1.6rem;
-    padding: 0;
-    list-style: none;
-}
-
-li {
-    font-weight: bold;
-}
-
-table {
-    font-size: 2rem;
-}
-
-table thead th {
-    padding: 5px;
-    border-bottom: 2px solid #424748;
-}
-
-table td {
-    padding: 10px;
-    text-align: center;
-}
-
-form * {
-    padding: 5px;
-    border-radius: 5px;
-    margin: 30px 0;
-}
-
-section {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 1.6rem;
-}
-
-section div:nth-child(even) {
-    font-weight: bold;
-}
-
-#add-review-form {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 1.6rem;
-    margin-bottom: 2rem
-}
-
-#add-review-form > textarea {
-    width: 25rem;
-}
-
-#add-review-form > button {
-    font-size: 1.6rem;
-    width: 16rem;
-    grid-column: 2 / 3;
-    margin-bottom: 2.4rem;
-} */
-
 .btn {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 8px;
+    margin-left: 11px;
 }
 
 .btn-success,
 .btn-warning {
-    padding-right: 30px;
+    padding-left: 15px;
+    padding-right: 14px;
     text-decoration: none;
 }
 
+.btn-secondary {
+    padding-left: 17px;
+    padding-right: 18px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
 .btn-danger {
-    padding-right: 41px;
+    padding-left: 20.5px;
+    padding-right: 20.5px;
     margin-top: 15px;
     margin-bottom: 5px;
 }
 
 .card-link {
     text-decoration: none;
+}
+
+#up-vaccs {
+    margin-bottom: 10px;
 }
