--- a/views/dogs/myIntakeIndex.ejs
+++ b/views/dogs/myIntakeIndex.ejs
@@ -5,6 +5,45 @@
 <main>
     <h1 class="head-title"><%= title %></h1>
     <div>
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 g5 px-4">
+            <% dogs.forEach((dog) => { %>
+                <% if(dog.adoptable){ %>          
+                    <div class="col">
+                        <div class="card" id="dog-card">
+                            <div class="card-body">
+                                <h5 class="card-title"><%= dog.name %>'s General Info:</h5>
+                                <p class="card-text">
+                                    <% if(dog.adoptable === true){ %>
+                                        <strong><%= dog.name %> is ready for adoption!</strong>
+                                    <% } %>
+                                    <% if(dog.adopted === true){ %>
+                                        <strong><%= dog.name %> has been adopted!</strong>
+                                    <% } %>
+                                    <% if(dog.transferred === true){ %>
+                                        <strong><%= dog.name %> has been transferred</strong>
+                                    <% } %>
+                                    <% if(!dog.adoptable && !dog.adopted && !dog.transferred){ %>
+                                        <strong><%= dog.name %> is not ready for adoption</strong>
+                                    <% } %>
+                                    Age: <strong><%= dog.age %></strong><br>
+                                    Breed: <strong><%= dog.breed %></strong><br>
+                                    Weight: <strong><%= dog.weight %></strong><br>
+                                </p>
+                                <a href="/dogs/<%= dog._id %>" class="card-link"><button class="btn btn-primary mb-2">DETAILS</button></a>
+                            </div>
+                        </div>
+                    </div>
+                <% } %> 
+            <% }) %>
+            </div>
+        </div>
+    </div>
+</main>
+
+<!-- <main>
+    <h1 class="head-title"><%= title %></h1>
+    <div>
         <% dogs.forEach((dog) => { %>
             <% if (dog.intakeRep.equals(user?.profile._id)) { %>
             <div class="card" style="width: 18rem;">
@@ -26,6 +65,6 @@
             <% } %> 
         <% }) %> 
     </div>
-</main>
+</main> -->
 
 <%- include('../partials/footer') %>
