--- a/views/dogs/home.ejs
+++ b/views/dogs/home.ejs
@@ -5,23 +5,17 @@
 <main>
     <h1 class="head-title"><%= title %> </h1>
     <a 
-    href="/dogs/new" <%- title === 'Dog Intake' ? 'class="active"' : '' %>
-    ><button type="submit">ADD DOG</button></a>
+    href="/dogs/new"><button type="submit" class="btn btn-success">ADD DOG</button></a>
     <a 
-    href="/dogs" <%- title === 'Adoptable Dogs' ? 'class="active"' : '' %>
-    ><button type="submit">ADOPTABLE DOGS</button></a>
+    href="/dogs"><button type="submit" class="btn btn-primary">ADOPTABLE DOGS</button></a>
     <a 
-    href="/dogs/notadoptable" <%- title === 'Not Ready for Adoption' ? 'class="active"' : '' %>
-    ><button type="submit">NOT YET ADOPTABLE DOGS</button></a>
+    href="/dogs/notadoptable"><button type="submit" class="btn btn-secondary">NOT YET ADOPTABLE DOGS</button></a>
     <a 
-    href="/dogs/adopted" <%- title === 'Dogs in Forever Homes!' ? 'class="active"' : '' %>
-    ><button type="submit">ADOPTED DOGS</button></a>
+    href="/dogs/adopted"><button type="submit" class="btn btn-dark">ADOPTED DOGS</button></a>
     <a 
-    href="/dogs/transferred" <%- title === 'Specialty Case Transfers' ? 'class="active"' : '' %>
-    ><button type="submit">TRANSFERRED DOGS</button></a>
+    href="/dogs/transferred"><button type="submit" class="btn btn-warning">TRANSFERRED DOGS</button></a>
     <a 
-    href="/dogs/my-intake-history" <%- title === 'My Intake History' ? 'class="active"' : '' %>
-    ><button type="submit">MY INTAKE HISTORY</button></a>
+    href="/dogs/my-intake-history"><button type="submit" class="btn btn-info">MY INTAKE HISTORY</button></a>
 
 </main>
 
