--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -41,6 +41,7 @@ nav {
 #menu a {
   margin: 10px;
   text-decoration: none;
+  color: black;
 }
 
 #logo {
@@ -51,6 +52,7 @@ nav {
 
 #logo a {
   text-decoration: none;
+  color: black;
 }
 
 main {
@@ -61,5 +63,6 @@ main {
 }
 
 h1 {
-  font-size: 2.2rem;
+  font-size: 3rem;
+  margin: 10px;
 }
