--- a/views/dogs/myIntakeIndex.ejs
+++ b/views/dogs/myIntakeIndex.ejs
@@ -8,7 +8,7 @@
         <div class="container">
             <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 g5 px-4">
             <% dogs.forEach((dog) => { %>
-                <% if(dog.adoptable){ %>          
+                <% if (dog.intakeRep.equals(user?.profile._id)) { %>          
                     <div class="col">
                         <div class="card" id="dog-card">
                             <div class="card-body">
