--- a/views/dogs/home.ejs
+++ b/views/dogs/home.ejs
@@ -4,18 +4,21 @@
 
 <main>
     <h1 class="head-title"><%= title %> </h1>
-    <a 
-    href="/dogs/new" class="home-link"><button type="submit" class="btn btn-success">ADD DOG</button></a>
-    <a 
-    href="/dogs" class="home-link"><button type="submit" class="btn btn-primary">ADOPTABLE DOGS</button></a>
-    <a 
-    href="/dogs/notadoptable" class="home-link"><button type="submit" class="btn btn-secondary">NOT YET ADOPTABLE DOGS</button></a>
-    <a 
-    href="/dogs/adopted" class="home-link"><button type="submit" class="btn btn-dark">ADOPTED DOGS</button></a>
-    <a 
-    href="/dogs/transferred" class="home-link"><button type="submit" class="btn btn-warning">TRANSFERRED DOGS</button></a>
-    <a 
-    href="/dogs/my-intake-history" class="home-link"><button type="submit" class="btn btn-info">MY INTAKE HISTORY</button></a>
+    <div class="my-card2">
+        
+        <a 
+        href="/dogs/new" class="home-link"><button type="submit" class="btn btn-success">ADD DOG</button></a>
+        <a 
+        href="/dogs" class="home-link"><button type="submit" class="btn btn-primary">ADOPTABLE DOGS</button></a>
+        <a 
+        href="/dogs/notadoptable" class="home-link"><button type="submit" class="btn btn-secondary">NOT YET ADOPTABLE DOGS</button></a>
+        <a 
+        href="/dogs/adopted" class="home-link"><button type="submit" class="btn btn-dark">ADOPTED DOGS</button></a>
+        <a 
+        href="/dogs/transferred" class="home-link"><button type="submit" class="btn btn-warning">TRANSFERRED DOGS</button></a>
+        <a 
+        href="/dogs/my-intake-history" class="home-link"><button type="submit" class="btn btn-info">MY INTAKE HISTORY</button></a>
+    </div>
 </main>
 
 <%- include("../partials/footer") %>
