--- a/public/stylesheets/dogs/new.css
+++ b/public/stylesheets/dogs/new.css
@@ -31,6 +31,18 @@
     align-items: center;
 }
 
+.my-card2 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 10px;
+    /* width: 30rem; */
+    background-color: white;
+    border-radius: 4px;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+
 .btn {
     display: flex;
     justify-content: center;
@@ -53,29 +65,29 @@
 
 
 .btn-secondary {
-    padding-left: 17px;
-    padding-right: 18px;
+    padding-left: 16px;
+    padding-right: 17px;
     margin-top: 15px;
     margin-bottom: 15px;
 }
 
 .btn-warning {
-    padding-left: 36px;
-    padding-right: 36px;
+    padding-left: 33px;
+    padding-right: 33px;
     margin-top: 15px;
     margin-bottom: 15px;
 }
 
 .btn-info {
-    padding-left: 38px;
-    padding-right: 38px;
+    padding-left: 35px;
+    padding-right: 35px;
     text-decoration: none;
 
 }
 
 .btn-dark {
-    padding-left: 47px;
-    padding-right: 48px;
+    padding-left: 45px;
+    padding-right: 46px;
     text-decoration: none;
 }
 
