--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,27 +7,12 @@
   <nav>
     <% if (user) { %>
       <div id="menu">
-      <a href="/dogs/new" <%- title === 'Dog Intake' ? 'class="active"' : '' %>>ADD DOG</a>
+      <a href="/dogs/new">ADD DOG</a>
       <a href="/auth/logout">LOGOUT</a>
       </div>
       <div id="logo">
-      <a href="/dogs/home" <%- title === 'Home' ? 'class="active"' : '' %>><i class="fas fa-paw"></i> Dog-Rescue-O-Matic</a>
+      <a href="/dogs/home"><i class="fas fa-paw"></i> Dog-Rescue-O-Matic</a>
       </div>
-      <!-- <a 
-      href="/dogs" <%- title === 'Adoptable Dogs' ? 'class="active"' : '' %>
-      ><button type="submit">ADOPTABLE DOGS</button></a>
-      <a 
-      href="/dogs/notadoptable" <%- title === 'Not Ready for Adoption' ? 'class="active"' : '' %>
-      ><button type="submit">NOT YET ADOPTABLE DOGS</button></a>
-      <a 
-      href="/dogs/adopted" <%- title === 'Dogs in Forever Homes!' ? 'class="active"' : '' %>
-      ><button type="submit">ADOPTED DOGS</button></a>
-      <a 
-      href="/dogs/transferred" <%- title === 'Specialty Case Transfers' ? 'class="active"' : '' %>
-      ><button type="submit">TRANSFERRED DOGS</button></a>
-      <a 
-      href="/dogs/my-intake-history" <%- title === 'My Intake History' ? 'class="active"' : '' %>
-      ><button type="submit">MY INTAKE HISTORY</button></a> -->
     <% } else { %>
       <a href="/auth/google" class="siwg-link">
         <button type="submit" class="siwg">
