--- a/views/dogs/behavior.ejs
+++ b/views/dogs/behavior.ejs
@@ -36,7 +36,7 @@
         <div class="form-group">
             <div class="btn-group-toggle" data-toggle="buttons">
                 <label class="btn btn-secondary active">
-                    <input type="checkbox" id="houseBroken" name="houseBroken">   Friendly with humans?
+                    <input type="checkbox" id="houseBroken" name="houseBroken">   Potty Trained?
                 </label>
             </div>
         </div>
