--- a/views/dogs/updateBehavior.ejs
+++ b/views/dogs/updateBehavior.ejs
@@ -37,7 +37,7 @@
         <div class="form-group">
             <div class="btn-group-toggle" data-toggle="buttons">
                 <label class="btn btn-secondary active">
-                    <input type="checkbox" id="houseBroken" name="houseBroken">   Friendly with humans?
+                    <input type="checkbox" id="houseBroken" name="houseBroken">   Potty Trained?
                 </label>
             </div>
         </div>
@@ -48,7 +48,7 @@
         <div class="form-group">
             <input type="number" name="energy" id="energy" min="1" max="5" placeholder="Energy Level 1 - 5:" required>
         </div>
-        <button type="submit">Submit</button>
+        <button type="submit" class="btn btn-primary" id="behave-submit">Submit</button>
     </form>
     </div>
 </main>
