--- a/views/dogs/updateVaccs.ejs
+++ b/views/dogs/updateVaccs.ejs
@@ -70,7 +70,7 @@
             <label for="healthNotes">Enter any notes:</label>
             <textarea name="healthNotes" id="healthNotes" cols="30" rows="5"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" id="behave-submit">Submit</button>
     </form>
     </div>
 </main>
