--- a/views/dogs/adoption.ejs
+++ b/views/dogs/adoption.ejs
@@ -4,25 +4,27 @@
 
 <main>
     <h1 class="head-title"><%= title %></h1>
-    <form action='/dogs/<%= dog._id %>/adoption' method="POST">
-        <div class="form-group">
-            <label for="adoptorName">Adoptor's Name:</label>
-            <input type="text" name="adoptorName" id="adoptorName" required autocomplete="off">
-        </div>
-        <div class="form-group">
-            <label for="adoptAddress">Adoptor's Address:</label>
-            <input type="text" name="adoptAddress" id="adoptAddress" required autocomplete="off">
-        </div>
-        <div class="form-group">
-            <label for="adoptPhone">Adoptor's Phone:</label>
-            <input type="tel" name="adoptPhone" id="adoptPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required autocomplete="off">
-        </div>
-        <div class="form-group">
-            <label for="adoptEmail">Adoptor's Email:</label>
-            <input type="email" name="adoptEmail" id="adoptEmail" required autocomplete="off">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    <div class="my-form-card">
+        <form action='/dogs/<%= dog._id %>/adoption' method="POST">
+            <div class="form-group">
+                <label for="adoptorName">Adoptor's Name:</label>
+                <input type="text" name="adoptorName" id="adoptorName" required autocomplete="off">
+            </div>
+            <div class="form-group">
+                <label for="adoptAddress">Adoptor's Address:</label>
+                <input type="text" name="adoptAddress" id="adoptAddress" required autocomplete="off">
+            </div>
+            <div class="form-group">
+                <label for="adoptPhone">Adoptor's Phone:</label>
+                <input type="tel" name="adoptPhone" id="adoptPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required autocomplete="off">
+            </div>
+            <div class="form-group">
+                <label for="adoptEmail">Adoptor's Email:</label>
+                <input type="email" name="adoptEmail" id="adoptEmail" required autocomplete="off">
+            </div>
+            <button type="submit" class="btn btn-primary" id="behave-submit">Submit</button>
+        </form>
+    </div>
 </main>
 
 <%- include("../partials/footer") %>
